Cli_29/evosuite/original/evosuite-report-org/test_build_org.log
cd /home/liumengjiao/Desktop/CI/Benchmark/../bugs/Cli_29_buggy && timeout 300000 javac -cp  /home/liumengjiao/Desktop/defects4j/framework/lib/test_generation/generation/evosuite-current.jar:target/classes/:target/lib/*:lib/*  /home/liumengjiao/Desktop/CI/Evosuite/Cli_29/Cli/evosuite/3/org/apache/commons/cli/Util_ESTest.java /home/liumengjiao/Desktop/CI/Evosuite/Cli_29/Cli/evosuite/3/org/apache/commons/cli/Util_ESTest_scaffolding.java >> evosuite-report-org/test_build_org.log 2>&1

/home/liumengjiao/Desktop/CI/Evosuite/Cli_29/Cli/evosuite/3/org/apache/commons/cli/Util_ESTest.java:10: error: cannot find symbol
import org.apache.commons.cli.Util;
                             ^
  symbol:   class Util
  location: package org.apache.commons.cli
/home/liumengjiao/Desktop/CI/Evosuite/Cli_29/Cli/evosuite/3/org/apache/commons/cli/Util_ESTest.java:20: error: cannot find symbol
      Util util0 = new Util();
      ^
  symbol:   class Util
  location: class Util_ESTest
/home/liumengjiao/Desktop/CI/Evosuite/Cli_29/Cli/evosuite/3/org/apache/commons/cli/Util_ESTest.java:20: error: cannot find symbol
      Util util0 = new Util();
                       ^
  symbol:   class Util
  location: class Util_ESTest
/home/liumengjiao/Desktop/CI/Evosuite/Cli_29/Cli/evosuite/3/org/apache/commons/cli/Util_ESTest.java:25: error: cannot find symbol
      String string0 = Util.stripLeadingHyphens("b$R\"y3p,i8iF}93E");
                       ^
  symbol:   variable Util
  location: class Util_ESTest
/home/liumengjiao/Desktop/CI/Evosuite/Cli_29/Cli/evosuite/3/org/apache/commons/cli/Util_ESTest.java:32: error: cannot find symbol
      String string0 = Util.stripLeadingHyphens((String) null);
                       ^
  symbol:   variable Util
  location: class Util_ESTest
/home/liumengjiao/Desktop/CI/Evosuite/Cli_29/Cli/evosuite/3/org/apache/commons/cli/Util_ESTest.java:38: error: cannot find symbol
      String string0 = Util.stripLeadingHyphens("--");
                       ^
  symbol:   variable Util
  location: class Util_ESTest
/home/liumengjiao/Desktop/CI/Evosuite/Cli_29/Cli/evosuite/3/org/apache/commons/cli/Util_ESTest.java:44: error: cannot find symbol
      String string0 = Util.stripLeadingHyphens("-by$I#~/^<sqa}W8<");
                       ^
  symbol:   variable Util
  location: class Util_ESTest
/home/liumengjiao/Desktop/CI/Evosuite/Cli_29/Cli/evosuite/3/org/apache/commons/cli/Util_ESTest.java:50: error: cannot find symbol
      String string0 = Util.stripLeadingAndTrailingQuotes("");
                       ^
  symbol:   variable Util
  location: class Util_ESTest
/home/liumengjiao/Desktop/CI/Evosuite/Cli_29/Cli/evosuite/3/org/apache/commons/cli/Util_ESTest.java:56: error: cannot find symbol
      String string0 = Util.stripLeadingAndTrailingQuotes("--");
                       ^
  symbol:   variable Util
  location: class Util_ESTest
/home/liumengjiao/Desktop/CI/Evosuite/Cli_29/Cli/evosuite/3/org/apache/commons/cli/Util_ESTest.java:62: error: cannot find symbol
      String string0 = Util.stripLeadingAndTrailingQuotes("\"(\"");
                       ^
  symbol:   variable Util
  location: class Util_ESTest
/home/liumengjiao/Desktop/CI/Evosuite/Cli_29/Cli/evosuite/3/org/apache/commons/cli/Util_ESTest.java:68: error: cannot find symbol
      String string0 = Util.stripLeadingAndTrailingQuotes("\"\"rU`.");
                       ^
  symbol:   variable Util
  location: class Util_ESTest
/home/liumengjiao/Desktop/CI/Evosuite/Cli_29/Cli/evosuite/3/org/apache/commons/cli/Util_ESTest.java:74: error: cannot find symbol
      String string0 = Util.stripLeadingAndTrailingQuotes("\"_MS[i\"\"");
                       ^
  symbol:   variable Util
  location: class Util_ESTest
12 errors
